# service/api/api-handler.go
@@ -8,9 +8,10 @@ import (
 func (rt *_router) Handler() http.Handler {
 	// Register routes
 	rt.router.GET("/", rt.getHelloWorld)
-	rt.router.GET("/context", rt.wrap(rt.getContextReply))
-	rt.router.POST("/login", rt.wrap(rt.getLogin))
-	rt.router.DELETE("/user/:UserID/post/:PostID", rt.wrap(rt.deletePhoto)) //questa formula va
+	rt.router.GET("/context", rt.wrap(rt.getContextReply, true))
+	rt.router.POST("/login", rt.wrap(rt.doLogin, false))
+	rt.router.PUT("/user/:userID/username", rt.wrap(rt.setMyUserName, true))
+	//rt.router.DELETE("/user/:UserID/post/:PostID", rt.wrap(rt.deletePhoto)) //questa formula va
 	// Special routes
 	rt.router.GET("/liveness", rt.liveness)
 
